Revision history for Perl extension Math::Prime::Util.

0.30 
    - Add standard and strong Lucas tests in XS.

    - Fixed a rare refcount / bignum / callback issue.

    - Small mulmod speedup for non-gcc/x86_64 platforms.

    - Add more conditions to ECPP block verification.

    - Added:
        is_frobenius_underwood_pseudoprime

0.29 30 May 2013

    - Fix a signed vs. unsigned char issue in ranged moebius.  Thanks to the
      Debian testers for finding this.

    - XS is_prob_prime / is_prime now use a BPSW-style test (SPRP2 plus
      extra strong Lucas test) for values over 2^32.  This results in up
      to 2.5x faster performance for large 64-bit values on most machines.
      All PSP2s have been verified with Jan Feitsma's database.

    - forprimes now uses a segmented sieve.  This (1) allows arbitrary 64-bit
      ranges with good memory use, and (2) allows nesting on threaded perls.

    - prime_count_approx for very large values (> 10^36) was very slow without
      Math::MPFR.  Switch to Li+correction for large values if Math::MPFR is
      not available.

    - Workaround for MSVC compiler.

    - Added:
        is_pseudoprime (Fermat probable prime test)
        is_lucas_pseudoprime (standard Lucas-Selfridge test)
        is_extra_strong_lucas_pseudoprime (Mo/Jones/Grantham E.S. Lucas test)

0.28 23 May 2013

    - An optimization to nth_prime caused occasional threaded Win32 faults.
      Adjust so this is avoided.

    - Yet another XS micro-speedup (PERL_NO_GET_CONTEXT)

    - forprimes { block } [begin,]end.  e.g.
        forprimes { say } 100;
        $sum = 0;  forprimes { $sum += $_ } 1000,50000;  say $sum;
        forprimes { say if is_prime($_+2) } 10000;  # print twin primes

    - my $it = prime_iterator(10000); say $it->(); 
      This is experimental (that is, the interface may change).

0.27 20 May 2013

    - is_prime, is_prob_prime, next_prime, and prev_prime now all go straight