@@ -48,3 +48,8 @@
 
 - Write a standalone function that demonstrates the memory leak with MULTICALL,
   so we can use MULTICALL.
+
+- Tests for:
+   - F-U pseudoprime
+
+- PP F-U pseudoprime
